# ExtendedSearch

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs  slint.toml
.VSCodeCounter/2025-06-22_19-54-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-22_20-34-06/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-23_00-28-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-23_03-01-58/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-23_15-34-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: filter.rs  helper.rs  main.rs  ui_handler.rs
src/search_file/: build_tree.rs  mod.rs  settings.rs
ui/: app-window.slint
ui/components/: app-settings.slint  content-area.slint  custom-button.slint  filter-settings-optimized.slint  filter-settings.slint  scope-selection.slint  search-page.slint  search-result-view.slint  sidebar.slint
